Reverted to old code
Doing: splittings with bit of Jekyll code, yeah it is usefull now :wink: :wine_glass:

--- a/about.html
+++ b/about.html
@@ -1,7 +1,8 @@
 ---
 title: About Me
 description: About and CV for Marko Idžan
-permalink: about
+permalink: about.html
+image: img/og-image.png
 ---
 <!DOCTYPE html>
 <html lang="en">
