--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 title: Marko Idžan
 description: Marko Idžan’s Official Web Site
 permalink:
+image: img/og-image.png
 ---
 <!DOCTYPE html>
 <html lang="en">
