--- a/project/maskice-android-application.html
+++ b/project/maskice-android-application.html
@@ -40,14 +40,15 @@ image: img/maskice-android-app.jpg
                 </picture>
                 <div class="description">
                     <p>“maskice.hr” for Android™ Application if created as demo project for company "Gold Deal Ltd." in which with basic Android WebView to publish website to Android™ platform. It got few iterations with always latest Google Material Design schematics. Application was improved with modern navigation system and started using REST API for collecting data from web shop. Application is due to major update because of switching design and navigation of web site.</p>
+                    <p>Due to big changes in Web Site Structure, this application is Unpublished from All Download Sources, and it will not be updated anymore.</p>
                 </div>
             </div>
             <div class="details">
                 <h3>Project Details</h3>
                 <p><strong>Client:</strong> Gold Deal Ltd.</p>
                 <p><strong>Project start date:</strong> December 2017.</p>
-                <p><strong>Project Download:</strong> <svg class="icon"><use href="/svg/sprite.svg#playstore"></use></svg> <a href="https://play.google.com/store/apps/details?id=maskice.hr" target="_blank" rel="noopener noreferrer">Get it from Google™ Play Store</a></p>
-                <p><strong>Download Older Version:</strong> <svg class="icon"><use href="/svg/sprite.svg#amazon"></use></svg> <a href="https://amzn.to/2xcnIPw" target="_blank" rel="noopener noreferrer">Get it from Amazon App Store</a></p>
+                <!-- <p><strong>Project Download:</strong> <svg class="icon"><use href="/svg/sprite.svg#playstore"></use></svg> <a href="https://play.google.com/store/apps/details?id=maskice.hr" target="_blank" rel="noopener noreferrer">Get it from Google™ Play Store</a></p>
+                <p><strong>Download Older Version:</strong> <svg class="icon"><use href="/svg/sprite.svg#amazon"></use></svg> <a href="https://amzn.to/2xcnIPw" target="_blank" rel="noopener noreferrer">Get it from Amazon App Store</a></p> -->
                 <p><strong>Project Source Code:</strong> <svg class="icon"><use href="/svg/sprite.svg#external"></use></svg> <a href="https://github.com/idzan/maskicehr" target="_blank" rel="noopener noreferrer">github.com/idzan/maskicehr</a></p>
                 <p><strong>Technologies used:</strong> Java, XML, JavaScript, REST API</p>
             </div>
