--- a/contact.html
+++ b/contact.html
@@ -39,12 +39,12 @@ image: img/og-image.png
                         <fieldset>
                             <legend aria-hidden="true" class="visually-hidden">Your Name</legend>
                             <label for="name">Your Name: </label>
-                            <input type="text" name="name" id="name" placeholder="Enter Your Name" required>
+                            <input type="text" name="name" id="name" placeholder="Enter Your Name" autocomplete="name" required>
                         </fieldset>
                         <fieldset>
                             <legend aria-hidden="true" class="visually-hidden">Your E-mail</legend>
                             <label for="email">Your E-mail:</label>
-                            <input type="email" name="email" id="email" placeholder="Enter Your E-mail Address" required>
+                            <input type="email" name="email" id="email" placeholder="Enter Your E-mail Address" autocomplete="email" inputmode="email" required>
                         </fieldset>
                         <fieldset>
                             <legend aria-hidden="true" class="visually-hidden">Enter Your Message</legend>
