--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@ image: img/og-image.png
                         <fieldset>
                             <legend aria-hidden="true" class="visually-hidden">Your E-mail</legend>
                             <label for="email">Your E-mail:</label>
-                            <input type="email" name="email" id="email" placeholder="Enter Your E-mail Address" autocomplete="email" inputmode="email" required>
+                            <input type="email" name="email" id="email" placeholder="Enter Your E-mail Address" autocapitalize="off" autocomplete="email" inputmode="email" required>
                         </fieldset>
                         <fieldset>
                             <legend aria-hidden="true" class="visually-hidden">Enter Your Message</legend>
