--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@ image: img/og-image.png
         <section>
             <p>If you want to contact me you can use contact form, mail linked below or other medias for communication which are linked here.</p>
             <div class="contact-section">
-                <div class="form">
+                <!-- <div class="form">
                     <form method="post" name="contactme" data-netlify-recaptcha="true" data-netlify="true">
                         <fieldset>
                             <legend aria-hidden="true" class="visually-hidden">Your Name</legend>
@@ -54,7 +54,7 @@ image: img/og-image.png
                         <div class="g-recaptcha" data-sitekey="6LeTMJIUAAAAAEG3TEZrf6VD_ahP_Nphh7yC5iOf"></div>
                         <button type="submit">Send Your Message</button>
                     </form>
-                </div>
+                </div> -->
                 <div class="mail-social">
                     <p><svg class="icon contact mail"><use xlink:href="/svg/sprite.svg#mail"></use></svg> E-mail: <a href="mailto:marko@idzan.eu">marko(at)idzan.eu</a></p>
                     <p><svg class="icon contact phone"><use xlink:href="/svg/sprite.svg#phone"></use></svg> Phone: +385 (0)92 1996 272 <br><a href="https://wa.me/385921996272" target="_blank" rel="noopener noreferrer"><svg class="icon contact whatsapp"><use xlink:href="/svg/sprite.svg#whatsapp">a</use></svg></a><svg class="icon contact viber"><use xlink:href="/svg/sprite.svg#viber"></use></svg>Number is available on WhatsApp and Viber</p>
@@ -67,6 +67,7 @@ image: img/og-image.png
     {% include footer.html %}
     {% include scripts.html %}
     <!-- reCaptcha V2 Checkbox -->
-    <script type="opt-in" data-name="googleReCaptchav2" data-src="https://www.google.com/recaptcha/api.js" data-type="application/javascript" async defer></script>
+<!--     <script type="opt-in" data-name="googleReCaptchav2" data-src="https://www.google.com/recaptcha/api.js" data-type="application/javascript" async defer></script>
+ -->
 </body>
 </html>
