updated with accesibility and few more thingys
more accesibility addins plus some code tweaks so it will be easier to read

--- a/contact.html
+++ b/contact.html
@@ -35,10 +35,50 @@ image: img/og-image.png
             <p>If you want to contact me you can use mail linked below or other medias for communication which are linked here.</p>
             <div class="contact-section">
                 <div class="mail-social">
-                    <p><svg class="icon contact mail"><use xlink:href="/svg/sprite.svg#mail"></use></svg> E-mail: <a href="mailto:marko@idzan.eu">marko(at)idzan.eu</a></p>
-                    <p><svg class="icon contact phone"><use xlink:href="/svg/sprite.svg#phone"></use></svg> Phone: +385 (0)92 1996 272 <br><a href="https://wa.me/385921996272" target="_blank" rel="noopener noreferrer"><svg class="icon contact whatsapp"><use xlink:href="/svg/sprite.svg#whatsapp">a</use></svg></a><svg class="icon contact viber"><use xlink:href="/svg/sprite.svg#viber"></use></svg>Number is available on WhatsApp and Viber</p>
-                    <p><svg class="icon contact discord"><use xlink:href="/svg/sprite.svg#discord"></use></svg> Discord Server:  <a href="https://discord.gg/dxxznx5" target="_blank" rel="noopener noreferrer">Idzan Marko Official</a></p>
-                    <p><svg class="icon contact reddit"><use xlink:href="/svg/sprite.svg#reddit"></use></svg> Check out my subreddit:  <a href="https://www.reddit.com/r/MarkoIdzanOfficial/" target="_blank" rel="noopener noreferrer">MarkoIdzanOfficial</a></p>
+                    <p>
+                        <svg class="icon contact mail">
+                            <use xlink:href="/svg/sprite.svg#mail"></use>
+                        </svg> 
+                        E-mail: <a href="mailto:marko@idzan.eu">marko(at)idzan.eu</a>
+                    </p>
+
+                    <p>
+                        <svg class="icon contact phone">
+                            <use xlink:href="/svg/sprite.svg#phone"></use>
+                        </svg> 
+                        Phone: +385 (0)92 1996 272 
+                        <br>
+                        <a href="https://wa.me/385921996272" target="_blank" rel="noopener noreferrer">
+                            <svg class="icon contact whatsapp">
+                                <use xlink:href="/svg/sprite.svg#whatsapp"></use>
+                            </svg>
+                            <span class="visually-hidden" aria-hidden="true">WhatsApp </span>
+                            <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                        </a>
+                        <svg class="icon contact viber"><use xlink:href="/svg/sprite.svg#viber"></use></svg>Number is available on WhatsApp and Viber
+                    </p>
+
+                    <p>
+                        <svg class="icon contact discord">
+                            <use xlink:href="/svg/sprite.svg#discord"></use>
+                        </svg> 
+                        Discord Server:  
+                        <a href="https://discord.gg/dxxznx5" target="_blank" rel="noopener noreferrer">
+                            Idzan Marko Official
+                            <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                        </a>
+                    </p>
+
+                    <p>
+                        <svg class="icon contact reddit">
+                            <use xlink:href="/svg/sprite.svg#reddit"></use>
+                        </svg> 
+                        Check out my subreddit:  
+                        <a href="https://www.reddit.com/r/MarkoIdzanOfficial/" target="_blank" rel="noopener noreferrer">
+                            MarkoIdzanOfficial
+                            <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                        </a>
+                    </p>
                 </div>
             </div>
         </section>
