code readability & accessibility fixes
lot of projetcs, it took me a while

--- a/project/croatian-states-woocommerce.html
+++ b/project/croatian-states-woocommerce.html
@@ -44,10 +44,25 @@ image: img/cro-states-woo.jpg
             </div>
             <div class="details">
                 <h3>Project Details</h3>
-                <p><strong>Client:</strong> Gold Deal Ltd.</p>
-                <p><strong>Project start date:</strong> July 2017.</p>
-                <p><strong>Project web site:</strong> <svg class="icon"><use href="/svg/sprite.svg#external"></use></svg> <a href="https://github.com/idzan/woocommerce-hr-states" target="_blank" rel="noopener noreferrer">github.com/idzan/woocommerce-hr-states</a></p>
-                <p><strong>Technologies used:</strong> php</p>
+                <p>
+                    <strong>Client:</strong> Gold Deal Ltd.
+                </p>
+                <p>
+                    <strong>Project start date:</strong> July 2017.
+                </p>
+                <p>
+                    <strong>Project web site:</strong> 
+                    <svg class="icon">
+                        <use href="/svg/sprite.svg#external"></use>
+                    </svg> 
+                    <a href="https://github.com/idzan/woocommerce-hr-states" target="_blank" rel="noopener noreferrer">
+                        github.com/idzan/woocommerce-hr-states 
+                        <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                    </a>
+                    </p>
+                <p>
+                    <strong>Technologies used:</strong> php
+                </p>
             </div>
         </section>
     </main>
