--- a/project/kursiljo-web-site.html
+++ b/project/kursiljo-web-site.html
@@ -44,10 +44,25 @@ image: img/kursiljo.jpg
             </div>
             <div class="details">
                 <h3>Project Details</h3>
-                <p><strong>Client:</strong> Kursiljo Croatia</p>
-                <p><strong>Project start date:</strong> March 2009.</p>
-                <p><strong>Project web site:</strong> <svg class="icon"><use href="/svg/sprite.svg#external"></use></svg> <a href="https://kursiljo.com" target="_blank" rel="noopener noreferrer">kursiljo.com</a></p>
-                <p><strong>Technologies used:</strong> WordPress</p>
+                <p>
+                    <strong>Client:</strong> Kursiljo Croatia
+                </p>
+                <p>
+                    <strong>Project start date:</strong> March 2009.
+                </p>
+                <p>
+                    <strong>Project web site:</strong> 
+                    <svg class="icon">
+                        <use href="/svg/sprite.svg#external"></use>
+                    </svg> 
+                    <a href="https://kursiljo.com" target="_blank" rel="noopener noreferrer">
+                        kursiljo.com 
+                        <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                    </a>
+                </p>
+                <p>
+                    <strong>Technologies used:</strong> WordPress
+                </p>
             </div>
         </section>
     </main>
