--- a/project/marko93gaming-web-site.html
+++ b/project/marko93gaming-web-site.html
@@ -44,10 +44,25 @@ image: img/marko93gaming.jpg
             </div>
             <div class="details">
                 <h3>Project Details</h3>
-                <p><strong>Client:</strong> Marko93 Gaming YouTube Channel</p>
-                <p><strong>Project start date:</strong> October 2019.</p>
-                <p><strong>Project web site:</strong> <svg class="icon"><use href="/svg/sprite.svg#external"></use></svg> <a href="https://marko93gaming.netlify.app" target="_blank" rel="noopener noreferrer">marko93gaming.netlify.app</a></p>
-                <p><strong>Technologies used:</strong> HTML, CSS</p>
+                <p>
+                    <strong>Client:</strong> Marko93 Gaming YouTube Channel
+                </p>
+                <p>
+                    <strong>Project start date:</strong> October 2019.
+                </p>
+                <p>
+                    <strong>Project web site:</strong> 
+                    <svg class="icon">
+                        <use href="/svg/sprite.svg#external"></use>
+                    </svg> 
+                    <a href="https://marko93gaming.netlify.app" target="_blank" rel="noopener noreferrer">
+                        marko93gaming.netlify.app 
+                        <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                    </a>
+                </p>
+                <p>
+                    <strong>Technologies used:</strong> HTML, CSS
+                </p>
             </div>
         </section>
     </main>
