--- a/project/maskice-web-shop.html
+++ b/project/maskice-web-shop.html
@@ -44,11 +44,28 @@ image: img/maskice.jpg
             </div>
             <div class="details">
                 <h3>Project Details</h3>
-                <p><strong>Client:</strong> Gold Deal Ltd.</p>
-                <p><strong>Project start date:</strong> November 2015.</p>
-                <p><strong>Project web site:</strong> <svg class="icon"><use href="/svg/sprite.svg#external"></use></svg> <a href="https://maskice.hr" target="_blank" rel="noopener noreferrer">maskice.hr</a></p>
-                <p><strong>Technologies used (Previous Version of Site):</strong> WordPress, WooCommerce, HTML, CSS, php, JS</p>
-                <p><strong>Technologies used (Current Version of Site):</strong> HTML, CSS, php, JS, Algolia</p>
+                <p>
+                    <strong>Client:</strong> Gold Deal Ltd.
+                </p>
+                <p>
+                    <strong>Project start date:</strong> November 2015.
+                </p>
+                <p>
+                    <strong>Project web site:</strong> 
+                    <svg class="icon">
+                        <use href="/svg/sprite.svg#external"></use>
+                    </svg> 
+                    <a href="https://maskice.hr" target="_blank" rel="noopener noreferrer">
+                        maskice.hr 
+                        <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                    </a>
+                </p>
+                <p>
+                    <strong>Technologies used (Previous Version of Site):</strong> WordPress, WooCommerce, HTML, CSS, php, JS
+                </p>
+                <p>
+                    <strong>Technologies used (Current Version of Site):</strong> HTML, CSS, php, JS, Algolia
+                </p>
             </div>
         </section>
     </main>
