--- a/project/ceramics-craft-bm-web-site.html
+++ b/project/ceramics-craft-bm-web-site.html
@@ -44,10 +44,25 @@ image: img/keramicarski-bm.jpg
             </div>
             <div class="details">
                 <h3>Project Details</h3>
-                <p><strong>Client:</strong> Ceramics Craft “BM”</p>
-                <p><strong>Project start date:</strong> August 2015.</p>
-                <p><strong>Project web site:</strong> <svg class="icon"><use href="/svg/sprite.svg#external"></use></svg> <a href="https://www.keramicarskiobrtbm.hr/" target="_blank" rel="noopener noreferrer">keramicarskiobrtbm.hr</a></p>
-                <p><strong>Technologies used:</strong> WordPress</p>
+                <p>
+                    <strong>Client:</strong> Ceramics Craft “BM”
+                </p>
+                <p>
+                    <strong>Project start date:</strong> August 2015.
+                </p>
+                <p>
+                    <strong>Project web site:</strong> 
+                    <svg class="icon">
+                        <use href="/svg/sprite.svg#external"></use>
+                    </svg> 
+                    <a href="https://www.keramicarskiobrtbm.hr/" target="_blank" rel="noopener noreferrer">
+                        keramicarskiobrtbm.hr 
+                        <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                    </a>
+                </p>
+                <p>
+                    <strong>Technologies used:</strong> WordPress
+                </p>
             </div>
         </section>
     </main>
