--- a/project/hocunamore-web-site.html
+++ b/project/hocunamore-web-site.html
@@ -44,10 +44,25 @@ image: img/hocunamore.jpg
             </div>
             <div class="details">
                 <h3>Project Details</h3>
-                <p><strong>Client:</strong> Šimun Emanuel Travel Ltd.</p>
-                <p><strong>Project start date:</strong> June 2019.</p>
-                <p><strong>Project web site:</strong> <svg class="icon"><use href="/svg/sprite.svg#external"></use></svg> <a href="https://hocunamore.hr/" target="_blank" rel="noopener noreferrer">hocunamore.hr</a></p>
-                <p><strong>Technologies used:</strong> WordPress, php, JS, HTML, CSS</p>
+                <p>
+                    <strong>Client:</strong> Šimun Emanuel Travel Ltd.
+                </p>
+                <p>
+                    <strong>Project start date:</strong> June 2019.
+                </p>
+                <p>
+                    <strong>Project web site:</strong> 
+                    <svg class="icon">
+                        <use href="/svg/sprite.svg#external"></use>
+                    </svg> 
+                    <a href="https://hocunamore.hr/" target="_blank" rel="noopener noreferrer">
+                        hocunamore.hr 
+                        <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                    </a>
+                </p>
+                <p>
+                    <strong>Technologies used:</strong> WordPress, php, JS, HTML, CSS
+                </p>
             </div>
         </section>
     </main>
