--- a/project/maskice-android-application.html
+++ b/project/maskice-android-application.html
@@ -45,12 +45,25 @@ image: img/maskice-android-app.jpg
             </div>
             <div class="details">
                 <h3>Project Details</h3>
-                <p><strong>Client:</strong> Gold Deal Ltd.</p>
-                <p><strong>Project start date:</strong> December 2017.</p>
-                <!-- <p><strong>Project Download:</strong> <svg class="icon"><use href="/svg/sprite.svg#playstore"></use></svg> <a href="https://play.google.com/store/apps/details?id=maskice.hr" target="_blank" rel="noopener noreferrer">Get it from Google™ Play Store</a></p>
-                <p><strong>Download Older Version:</strong> <svg class="icon"><use href="/svg/sprite.svg#amazon"></use></svg> <a href="https://amzn.to/2xcnIPw" target="_blank" rel="noopener noreferrer">Get it from Amazon App Store</a></p> -->
-                <p><strong>Project Source Code:</strong> <svg class="icon"><use href="/svg/sprite.svg#external"></use></svg> <a href="https://github.com/idzan/maskicehr" target="_blank" rel="noopener noreferrer">github.com/idzan/maskicehr</a></p>
-                <p><strong>Technologies used:</strong> Java, XML, JavaScript, REST API</p>
+                <p>
+                    <strong>Client:</strong> Gold Deal Ltd.
+                </p>
+                <p>
+                    <strong>Project start date:</strong> December 2017.
+                </p>
+                <p>
+                    <strong>Project Source Code:</strong> 
+                    <svg class="icon">
+                        <use href="/svg/sprite.svg#external"></use>
+                    </svg> 
+                    <a href="https://github.com/idzan/maskicehr" target="_blank" rel="noopener noreferrer">
+                        github.com/idzan/maskicehr 
+                        <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                    </a>
+                </p>
+                <p>
+                    <strong>Technologies used:</strong> Java, XML, JavaScript, REST API
+                </p>
             </div>
         </section>
     </main>
