another batch of tweaked and fixed code for sites is up
to-do: finish all in next 30 minutes

--- a/project/najam-vozila-web-site.html
+++ b/project/najam-vozila-web-site.html
@@ -44,10 +44,25 @@ image: img/najam-vozila.jpg
             </div>
             <div class="details">
                 <h3>Project Details</h3>
-                <p><strong>Client:</strong> Great Choice Ltd.</p>
-                <p><strong>Project start date:</strong> January 2018.</p>
-                <p><strong>Project web site:</strong> <svg class="icon"><use href="/svg/sprite.svg#external"></use></svg> <a href="https://najam-vozila.hr/" target="_blank" rel="noopener noreferrer">najam-vozila.hr</a></p>
-                <p><strong>Technologies used:</strong> WordPress, php, HTML, CSS</p>
+                <p>
+                    <strong>Client:</strong> Great Choice Ltd.
+                </p>
+                <p>
+                    <strong>Project start date:</strong> January 2018.
+                </p>
+                <p>
+                    <strong>Project web site:</strong> 
+                    <svg class="icon">
+                        <use href="/svg/sprite.svg#external"></use>
+                    </svg> 
+                    <a href="https://najam-vozila.hr/" target="_blank" rel="noopener noreferrer">
+                        najam-vozila.hr 
+                        <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                    </a>
+                </p>
+                <p>
+                    <strong>Technologies used:</strong> WordPress, php, HTML, CSS
+                </p>
             </div>
         </section>
     </main>
