--- a/project/parish-of-st-barbara-vrapce-web-site.html
+++ b/project/parish-of-st-barbara-vrapce-web-site.html
@@ -44,10 +44,25 @@ image: img/zupa-vrapce.jpg
             </div>
             <div class="details">
                 <h3>Project Details</h3>
-                <p><strong>Client:</strong> Parish of St. Barbara's, Vrapce - Zagreb</p>
-                <p><strong>Project start date:</strong> Novmeber 2019.</p>
-                <p><strong>Project web site:</strong> <svg class="icon"><use href="/svg/sprite.svg#external"></use></svg> <a href="https://zupa-sbdm-vrapce.hr" target="_blank" rel="noopener noreferrer">zupa-sbdm-vrapce.hr</a></p>
-                <p><strong>Technologies used:</strong> WordPress, HTML, CSS, php</p>
+                <p>
+                    <strong>Client:</strong> Parish of St. Barbara's, Vrapce - Zagreb
+                </p>
+                <p>
+                    <strong>Project start date:</strong> Novmeber 2019.
+                </p>
+                <p>
+                    <strong>Project web site:</strong> 
+                    <svg class="icon">
+                        <use href="/svg/sprite.svg#external"></use>
+                    </svg> 
+                    <a href="https://zupa-sbdm-vrapce.hr" target="_blank" rel="noopener noreferrer">
+                        zupa-sbdm-vrapce.hr 
+                        <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                    </a>
+                </p>
+                <p>
+                    <strong>Technologies used:</strong> WordPress, HTML, CSS, php
+                </p>
             </div>
         </section>
     </main>
