--- a/project/parish-of-st-vitus-petrusevec-web-site.html
+++ b/project/parish-of-st-vitus-petrusevec-web-site.html
@@ -44,10 +44,25 @@ image: img/zupa-petrusevec.jpg
             </div>
             <div class="details">
                 <h3>Project Details</h3>
-                <p><strong>Client:</strong> Parish of St. Vitus, Petrusevec - Zagreb</p>
-                <p><strong>Project start date:</strong> December 2007</p>
-                <p><strong>Project web site:</strong> <svg class="icon"><use href="/svg/sprite.svg#external"></use></svg> <a href="https://zupa-petrusevec.hr" target="_blank" rel="noopener noreferrer">zupa-petrusevec.hr</a></p>
-                <p><strong>Technologies used:</strong> WordPress, HTML, CSS, JS</p>
+                <p>
+                    <strong>Client:</strong> Parish of St. Vitus, Petrusevec - Zagreb
+                </p>
+                <p>
+                    <strong>Project start date:</strong> December 2007
+                </p>
+                <p>
+                    <strong>Project web site:</strong> 
+                    <svg class="icon">
+                        <use href="/svg/sprite.svg#external"></use>
+                    </svg> 
+                    <a href="https://zupa-petrusevec.hr" target="_blank" rel="noopener noreferrer">
+                        zupa-petrusevec.hr 
+                        <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                    </a>
+                </p>
+                <p>
+                    <strong>Technologies used:</strong> WordPress, HTML, CSS, JS
+                </p>
             </div>
         </section>
     </main>
