--- a/project/mybar-web-shop.html
+++ b/project/mybar-web-shop.html
@@ -44,10 +44,25 @@ image: img/mybar.jpg
             </div>
             <div class="details">
                 <h3>Project Details</h3>
-                <p><strong>Client:</strong> MojBar2018 Ltd.</p>
-                <p><strong>Project start date:</strong> March 2018.</p>
-                <p><strong>Project web site:</strong> <svg class="icon"><use href="/svg/sprite.svg#external"></use></svg> <a href="https://mybar.hr/" target="_blank" rel="noopener noreferrer">mybar.hr</a></p>
-                <p><strong>Technologies used:</strong> WordPress, WooCommerce, HTML, CSS, php</p>
+                <p>
+                    <strong>Client:</strong> MojBar2018 Ltd.
+                </p>
+                <p>
+                    <strong>Project start date:</strong> March 2018.
+                </p>
+                <p>
+                    <strong>Project web site:</strong> 
+                    <svg class="icon">
+                        <use href="/svg/sprite.svg#external"></use>
+                    </svg> 
+                    <a href="https://mybar.hr/" target="_blank" rel="noopener noreferrer">
+                        mybar.hr 
+                        <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                    </a>
+                </p>
+                <p>
+                    <strong>Technologies used:</strong> WordPress, WooCommerce, HTML, CSS, php
+                </p>
             </div>
         </section>
     </main>
