--- a/project/nekretnina-web-site.html
+++ b/project/nekretnina-web-site.html
@@ -44,10 +44,24 @@ image: img/nekretnina.jpg
             </div>
             <div class="details">
                 <h3>Project Details</h3>
-                <p><strong>Client:</strong> Interhaus Nekretnine Ltd.</p>
-                <p><strong>Project start date:</strong> June 2018.</p>
-                <p><strong>Project web site:</strong> <svg class="icon"><use href="/svg/sprite.svg#external"></use></svg> <a href="https://nekretnina.hr" target="_blank" rel="noopener noreferrer">nekretnina.hr</a></p>
-                <p><strong>Technologies used:</strong> WordPress, JS, HTML, CSS, php</p>
+                <p>
+                    <strong>Client:</strong> Interhaus Nekretnine Ltd.
+                </p>
+                <p>
+                    <strong>Project start date:</strong> June 2018.
+                </p>
+                <p>
+                    <strong>Project web site:</strong> 
+                    <svg class="icon">
+                        <use href="/svg/sprite.svg#external"></use>
+                    </svg> 
+                    <a href="https://nekretnina.hr" target="_blank" rel="noopener noreferrer">
+                        nekretnina.hr 
+                        <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                    </a>
+                </p>
+                <p>
+                    <strong>Technologies used:</strong> WordPress, JS, HTML, CSS, php</p>
             </div>
         </section>
     </main>
