--- a/project/project.html
+++ b/project/project.html
@@ -44,10 +44,25 @@ image: img/og-image.png
             </div>
             <div class="details">
                 <h3>Project Details</h3>
-                <p><strong>Client:</strong> Client name or Client Company Name</p>
-                <p><strong>Project start date:</strong> Month Year</p>
-                <p><strong>Project web site:</strong> <svg class="icon"><use href="/svg/sprite.svg#external"></use></svg> <a href="#" target="_blank" rel="noopener noreferrer">Lorem Ipsum Link</a></p>
-                <p><strong>Technologies used:</strong> Tech1, Tech2, etc.</p>
+                <p>
+                    <strong>Client:</strong> Client name or Client Company Name
+                </p>
+                <p>
+                    <strong>Project start date:</strong> Month Year
+                </p>
+                <p>
+                    <strong>Project web site:</strong> 
+                    <svg class="icon">
+                        <use href="/svg/sprite.svg#external"></use>
+                    </svg> 
+                    <a href="#" target="_blank" rel="noopener noreferrer">
+                        Lorem Ipsum Link
+                        <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                    </a>
+                </p>
+                <p>
+                    <strong>Technologies used:</strong> Tech1, Tech2, etc.
+                </p>
             </div>
         </section>
     </main>
