--- a/project/simun-emanuel-travels-web-site.html
+++ b/project/simun-emanuel-travels-web-site.html
@@ -44,10 +44,23 @@ image: img/simun-emanuel.jpg
             </div>
             <div class="details">
                 <h3>Project Details</h3>
-                <p><strong>Client:</strong> Šimun Emanuel Travel Ltd.</p>
-                <p><strong>Project start date:</strong> May 2015.</p>
-                <p><strong>Project web site:</strong> <svg class="icon"><use href="/svg/sprite.svg#external"></use></svg> <a href="https://simun-emanuel.hr/" target="_blank" rel="noopener noreferrer">simun-emanuel.hr</a></p>
-                <p><strong>Technologies used:</strong> WordPress, WooCommerce, php, JS, HTML, CSS</p>
+                <p>
+                    <strong>Client:</strong> Šimun Emanuel Travel Ltd.</p>
+                <p>
+                    <strong>Project start date:</strong> May 2015.</p>
+                <p>
+                    <strong>Project web site:</strong> 
+                    <svg class="icon">
+                        <use href="/svg/sprite.svg#external"></use>
+                    </svg> 
+                    <a href="https://simun-emanuel.hr/" target="_blank" rel="noopener noreferrer">
+                        simun-emanuel.hr 
+                        <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                    </a>
+                </p>
+                <p>
+                    <strong>Technologies used:</strong> WordPress, WooCommerce, php, JS, HTML, CSS
+                </p>
             </div>
         </section>
     </main>
