--- a/project/twitter-python-bot.html
+++ b/project/twitter-python-bot.html
@@ -44,10 +44,25 @@ image: img/python-twitter-bot-webtermsbot.jpg
             </div>
             <div class="details">
                 <h3>Project Details</h3>
-                <p><strong>Client:</strong> Private Project</p>
-                <p><strong>Project start date:</strong> January 2020.</p>
-                <p><strong>Project web site:</strong> <svg class="icon"><use href="/svg/sprite.svg#external"></use></svg> <a href="https://github.com/idzan/twitter-retweet-like-bot" target="_blank" rel="noopener noreferrer">github.com/idzan/twitter-retweet-like-bot</a></p>
-                <p><strong>Technologies used:</strong> Python, Twitter API</p>
+                <p>
+                    <strong>Client:</strong> Private Project
+                </p>
+                <p>
+                    <strong>Project start date:</strong> January 2020.
+                </p>
+                <p>
+                    <strong>Project web site:</strong> 
+                    <svg class="icon">
+                        <use href="/svg/sprite.svg#external"></use>
+                    </svg> 
+                    <a href="https://github.com/idzan/twitter-retweet-like-bot" target="_blank" rel="noopener noreferrer">
+                        github.com/idzan/twitter-retweet-like-bot 
+                        <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                    </a>
+                </p>
+                <p>
+                    <strong>Technologies used:</strong> Python, Twitter API
+                </p>
             </div>
         </section>
     </main>
