--- a/project/tiskara-web-shop.html
+++ b/project/tiskara-web-shop.html
@@ -44,10 +44,25 @@ image: img/tiskara.jpg
             </div>
             <div class="details">
                 <h3>Project Details</h3>
-                <p><strong>Client:</strong> Global Print Ltd.</p>
-                <p><strong>Project start date:</strong> June 2018.</p>
-                <p><strong>Project web site:</strong> <svg class="icon"><use href="/svg/sprite.svg#external"></use></svg> <a href="https://tiskara.hr" target="_blank" rel="noopener noreferrer">tiskara.hr</a></p>
-                <p><strong>Technologies used:</strong> WordPress, WooCommerce, php</p>
+                <p>
+                    <strong>Client:</strong> Global Print Ltd.
+                </p>
+                <p>
+                    <strong>Project start date:</strong> June 2018.
+                </p>
+                <p>
+                    <strong>Project web site:</strong> 
+                    <svg class="icon">
+                        <use href="/svg/sprite.svg#external"></use>
+                    </svg> 
+                    <a href="https://tiskara.hr" target="_blank" rel="noopener noreferrer">
+                        tiskara.hr
+                        <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                    </a>
+                </p>
+                <p>
+                    <strong>Technologies used:</strong> WordPress, WooCommerce, php
+                </p>
             </div>
         </section>
     </main>
