mroe accesibility fixes and tweaks
mostly adding title=opens in new tab, plus check on privacy page which was coustrofobic mess of code lol

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@ image: img/og-image.png
                         </svg> 
                         Phone: +385 (0)92 1996 272 
                         <br>
-                        <a href="https://wa.me/385921996272" target="_blank" rel="noopener noreferrer">
+                        <a href="https://wa.me/385921996272" target="_blank" rel="noopener noreferrer" title="Opens in new tab">
                             <svg class="icon contact whatsapp">
                                 <use xlink:href="/svg/sprite.svg#whatsapp"></use>
                             </svg>
@@ -63,7 +63,7 @@ image: img/og-image.png
                             <use xlink:href="/svg/sprite.svg#discord"></use>
                         </svg> 
                         Discord Server:  
-                        <a href="https://discord.gg/dxxznx5" target="_blank" rel="noopener noreferrer">
+                        <a href="https://discord.gg/dxxznx5" target="_blank" rel="noopener noreferrer" title="Opens in new tab">
                             Idzan Marko Official
                             <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
                         </a>
@@ -74,7 +74,7 @@ image: img/og-image.png
                             <use xlink:href="/svg/sprite.svg#reddit"></use>
                         </svg> 
                         Check out my subreddit:  
-                        <a href="https://www.reddit.com/r/MarkoIdzanOfficial/" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.reddit.com/r/MarkoIdzanOfficial/" target="_blank" rel="noopener noreferrer" title="Opens in new tab">
                             MarkoIdzanOfficial
                             <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
                         </a>
