--- a/project/croatian-states-woocommerce.html
+++ b/project/croatian-states-woocommerce.html
@@ -55,7 +55,7 @@ image: img/cro-states-woo.jpg
                     <svg class="icon">
                         <use href="/svg/sprite.svg#external"></use>
                     </svg> 
-                    <a href="https://github.com/idzan/woocommerce-hr-states" target="_blank" rel="noopener noreferrer">
+                    <a href="https://github.com/idzan/woocommerce-hr-states" target="_blank" rel="noopener noreferrer" title="Opens in new tab">
                         github.com/idzan/woocommerce-hr-states 
                         <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
                     </a>
