--- a/project/marko93gaming-web-site.html
+++ b/project/marko93gaming-web-site.html
@@ -55,7 +55,7 @@ image: img/marko93gaming.jpg
                     <svg class="icon">
                         <use href="/svg/sprite.svg#external"></use>
                     </svg> 
-                    <a href="https://marko93gaming.netlify.app" target="_blank" rel="noopener noreferrer">
+                    <a href="https://marko93gaming.netlify.app" target="_blank" rel="noopener noreferrer" vs>
                         marko93gaming.netlify.app 
                         <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
                     </a>
