--- a/project/maskice-android-application.html
+++ b/project/maskice-android-application.html
@@ -56,7 +56,7 @@ image: img/maskice-android-app.jpg
                     <svg class="icon">
                         <use href="/svg/sprite.svg#external"></use>
                     </svg> 
-                    <a href="https://github.com/idzan/maskicehr" target="_blank" rel="noopener noreferrer">
+                    <a href="https://github.com/idzan/maskicehr" target="_blank" rel="noopener noreferrer" title="Opens in new tab">
                         github.com/idzan/maskicehr 
                         <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
                     </a>
