--- a/project/mybar-web-shop.html
+++ b/project/mybar-web-shop.html
@@ -55,7 +55,7 @@ image: img/mybar.jpg
                     <svg class="icon">
                         <use href="/svg/sprite.svg#external"></use>
                     </svg> 
-                    <a href="https://mybar.hr/" target="_blank" rel="noopener noreferrer">
+                    <a href="https://mybar.hr/" target="_blank" rel="noopener noreferrer" title="Opens in new tab">
                         mybar.hr 
                         <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
                     </a>
