--- a/project/simun-emanuel-travels-web-site.html
+++ b/project/simun-emanuel-travels-web-site.html
@@ -53,7 +53,7 @@ image: img/simun-emanuel.jpg
                     <svg class="icon">
                         <use href="/svg/sprite.svg#external"></use>
                     </svg> 
-                    <a href="https://simun-emanuel.hr/" target="_blank" rel="noopener noreferrer">
+                    <a href="https://simun-emanuel.hr/" target="_blank" rel="noopener noreferrer" title="Opens in new tab">
                         simun-emanuel.hr 
                         <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
                     </a>
