--- a/project/tiskara-web-shop.html
+++ b/project/tiskara-web-shop.html
@@ -55,7 +55,7 @@ image: img/tiskara.jpg
                     <svg class="icon">
                         <use href="/svg/sprite.svg#external"></use>
                     </svg> 
-                    <a href="https://tiskara.hr" target="_blank" rel="noopener noreferrer">
+                    <a href="https://tiskara.hr" target="_blank" rel="noopener noreferrer" title="Opens in new tab">
                         tiskara.hr
                         <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
                     </a>
