--- a/privacy.html
+++ b/privacy.html
@@ -79,14 +79,37 @@ image: img/og-image.png
             <h3>How can I control cookies?</h3>
             <p>You have the right to decide whether to accept or reject cookies. You can exercise your cookie rights by setting your preferences in the Cookie Consent Manager. The Cookie Consent Manager allows you to select which categories of cookies you accept or reject. Essential cookies cannot be rejected as they are strictly necessary to provide you with services.</p>
             <p>The Cookie Consent Manager can be found in the footer of our website. If you choose to reject cookies, you may still use our website though your access to some functionality and areas of our website may be restricted. You may also set or amend your web browser controls to accept or refuse cookies. As the means by which you can refuse cookies through your web browser controls vary from browser-to-browser, you should visit your browser's help menu for more information.</p>
-            <p>In addition, most advertising networks offer you a way to opt out of targeted advertising. If you would like to find out more information, please visit <a href="https://www.aboutads.info/choices/" target="_blank" rel="noopener noreferrer">https://www.aboutads.info/choices/</a> or <a href="https://www.youronlinechoices.com" target="_blank" rel="noopener noreferrer">https://www.youronlinechoices.com</a>.</p>
+            <p>In addition, most advertising networks offer you a way to opt out of targeted advertising. If you would like to find out more information, please visit 
+                <svg class="icon">
+                    <use href="/svg/sprite.svg#external"></use>
+                </svg>
+                <a href="https://www.aboutads.info/choices/" target="_blank" rel="noopener noreferrer" title="Opens in new tab">
+                    https://www.aboutads.info/choices/
+                    <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                </a> or 
+                <svg class="icon">
+                    <use href="/svg/sprite.svg#external"></use>
+                </svg>
+                <a href="https://www.youronlinechoices.com" target="_blank" rel="noopener noreferrer" title="Opens in new tab">
+                        https://www.youronlinechoices.com
+                        <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                </a>.
+            </p>
             <h3>What Cookies are serverd through this web site?</h3>
             <p>The specific types of first and third party cookies served through our WebSite and the purposes they perform are described below (please note that the specific cookies served may vary depending on the specific Online Properties you visit):</p>
             <h4>Essential Web Site Cookies:</h4>
             <p>These cookies are strictly necessary to provide you with services available through our WebSite and to use some of its features.</p>
             <p>
                 <strong>Purpose: </strong>Used by Netlify to provide web hosting and Content Delivery Network (CDN) features to this web site. It processes all data coming from Git Service (GitHub), makes rewrites to page display names (example: removes .html from links) and displays them trough their service.<br>
-                <strong>Service: </strong>Netlify - <a href="https://www.netlify.com/privacy" target="_blank" rel="noopener noreferrer">View Service Privacy Policy</a> <br>
+                <strong>Service: </strong>Netlify - 
+                <svg class="icon">
+                    <use href="/svg/sprite.svg#external"></use>
+                </svg>
+                <a href="https://www.netlify.com/privacy" target="_blank" rel="noopener noreferrer" title="Opens in new tab">
+                    View Service Privacy Policy
+                    <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                </a> 
+                <br>
                 <strong>Country:</strong>United States and Ireland
             </p>
 
@@ -96,7 +119,15 @@ image: img/og-image.png
                 <strong>Name: </strong> _ga <br>
                 <strong>Purpose: </strong>It records a particular ID used to come up with data about website usage by the user. It is a HTTP cookie that expires after 2 years. <br>
                 <strong>Provider: </strong>.idzan.eu <br>
-                <strong>Service: </strong>Google Analytics - <a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">View Service Privacy Policy</a> <br>
+                <strong>Service: </strong>Google Analytics - 
+                <svg class="icon">
+                    <use href="/svg/sprite.svg#external"></use>
+                </svg>
+                <a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer" title="Opens in new tab">
+                    View Service Privacy Policy
+                    <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                </a> 
+                <br>
                 <strong>Country:</strong>United States and Ireland
             </p>
             <hr>
@@ -104,14 +135,30 @@ image: img/og-image.png
                 <strong>Name: </strong> _gid <br>
                 <strong>Purpose: </strong>Keeps an entry of unique ID which is then used to come up with statistical data on website usage by visitors. It is a HTTP cookie type and expires after a browsing session. <br>
                 <strong>Provider: </strong>.idzan.eu <br>
-                <strong>Service: </strong>Google Analytics - <a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">View Service Privacy Policy</a> <br>
+                <strong>Service: </strong>Google Analytics - 
+                <svg class="icon">
+                    <use href="/svg/sprite.svg#external"></use>
+                </svg>
+                <a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer" title="Opens in new tab">
+                    View Service Privacy Policy
+                    <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                </a> 
+                <br>
                 <strong>Country:</strong>United States and Ireland</p>
             <hr>
             <p>
                 <strong>Name: </strong> _gat_UA-47485892-14 <br>
                 <strong>Purpose: </strong>Enables Google Analytics regulate the rate of requesting. It is a HTTP cookie type that lasts for a session. <br>
                 <strong>Provider: </strong>.idzan.eu <br>
-                <strong>Service: </strong>Google Analytics - <a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">View Service Privacy Policy</a> <br>
+                <strong>Service: </strong>Google Analytics - 
+                <svg class="icon">
+                    <use href="/svg/sprite.svg#external"></use>
+                </svg>
+                <a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer" title="Opens in new tab">
+                    View Service Privacy Policy
+                    <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                </a> 
+                <br>
                 <strong>Country:</strong>United States and Ireland
             </p>
 
@@ -124,7 +171,15 @@ image: img/og-image.png
             <h2>8. WHAT ARE YOUR PRIVACY RIGHTS?</h2>
             <p>In some regions (like the European Economic Area), you have certain rights under applicable data protection laws. These may include the right (i) to request access and obtain a copy of your personal information, (ii) to request rectification or erasure; (iii) to restrict the processing of your personal information; and (iv) if applicable, to data portability. In certain circumstances, you may also have the right to object to the processing of your personal information. To make such a request, please use the contact details provided below. We will consider and act upon any request in accordance with applicable data protection laws.</p>
             <p>If we are relying on your consent to process your personal information, you have the right to withdraw your consent at any time. Please note however that this will not affect the lawfulness of the processing before its withdrawal.</p>
-            <p>If you are resident in the European Economic Area and you believe we are unlawfully processing your personal information, you also have the right to complain to your local data protection supervisory authority. You can find their contact details here: <a href="https://ec.europa.eu/justice/data-protection/bodies/authorities/index_en.htm" target="_blank" rel="noopener noreferrer">https://ec.europa.eu/justice/data-protection/bodies/authorities/index_en.htm</a>.</p>
+            <p>If you are resident in the European Economic Area and you believe we are unlawfully processing your personal information, you also have the right to complain to your local data protection supervisory authority. You can find their contact details here: 
+                <svg class="icon">
+                    <use href="/svg/sprite.svg#external"></use>
+                </svg>
+                <a href="https://ec.europa.eu/justice/data-protection/bodies/authorities/index_en.htm" target="_blank" rel="noopener noreferrer" title="Opens in new tab"> 
+                    https://ec.europa.eu/justice/data-protection/bodies/authorities/index_en.htm
+                    <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
+                </a>.
+            </p>
             
             <h2>9. CONTROLS FOR DO-NOT-TRACK FEATURES</h2>
             <p>Most web browsers and some mobile operating systems and mobile applications include a Do-Not-Track (“DNT”) feature or setting you can activate to signal your privacy preference not to have data about your online browsing activities monitored and collected. No uniform technology standard for recognizing and implementing DNT signals has been finalized. As such, we do not currently respond to DNT browser signals or any other mechanism that automatically communicates your choice not to be tracked online. If a standard for online tracking is adopted that we must follow in the future, we will inform you about that practice in a revised version of this Privacy Policy.</p>
