--- a/project/ceramics-craft-bm-web-site.html
+++ b/project/ceramics-craft-bm-web-site.html
@@ -55,7 +55,7 @@ image: img/keramicarski-bm.jpg
                     <svg class="icon">
                         <use href="/svg/sprite.svg#external"></use>
                     </svg> 
-                    <a href="https://www.keramicarskiobrtbm.hr/" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.keramicarskiobrtbm.hr/" target="_blank" rel="noopener noreferrer" title="Opens in new tab">
                         keramicarskiobrtbm.hr 
                         <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
                     </a>
