--- a/project/hocunamore-web-site.html
+++ b/project/hocunamore-web-site.html
@@ -55,7 +55,7 @@ image: img/hocunamore.jpg
                     <svg class="icon">
                         <use href="/svg/sprite.svg#external"></use>
                     </svg> 
-                    <a href="https://hocunamore.hr/" target="_blank" rel="noopener noreferrer">
+                    <a href="https://hocunamore.hr/" target="_blank" rel="noopener noreferrer" title="Opens in new tab">
                         hocunamore.hr 
                         <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
                     </a>
