--- a/project/kursiljo-web-site.html
+++ b/project/kursiljo-web-site.html
@@ -55,7 +55,7 @@ image: img/kursiljo.jpg
                     <svg class="icon">
                         <use href="/svg/sprite.svg#external"></use>
                     </svg> 
-                    <a href="https://kursiljo.com" target="_blank" rel="noopener noreferrer">
+                    <a href="https://kursiljo.com" target="_blank" rel="noopener noreferrer" title="Opens in new tab">
                         kursiljo.com 
                         <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
                     </a>
