--- a/project/maskice-web-shop.html
+++ b/project/maskice-web-shop.html
@@ -55,7 +55,7 @@ image: img/maskice.jpg
                     <svg class="icon">
                         <use href="/svg/sprite.svg#external"></use>
                     </svg> 
-                    <a href="https://maskice.hr" target="_blank" rel="noopener noreferrer">
+                    <a href="https://maskice.hr" target="_blank" rel="noopener noreferrer" title="Opens in new tab">
                         maskice.hr 
                         <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
                     </a>
