--- a/project/parish-of-st-barbara-vrapce-web-site.html
+++ b/project/parish-of-st-barbara-vrapce-web-site.html
@@ -55,7 +55,7 @@ image: img/zupa-vrapce.jpg
                     <svg class="icon">
                         <use href="/svg/sprite.svg#external"></use>
                     </svg> 
-                    <a href="https://zupa-sbdm-vrapce.hr" target="_blank" rel="noopener noreferrer">
+                    <a href="https://zupa-sbdm-vrapce.hr" target="_blank" rel="noopener noreferrer" title="Opens in new tab">
                         zupa-sbdm-vrapce.hr 
                         <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
                     </a>
