--- a/project/project.html
+++ b/project/project.html
@@ -55,7 +55,7 @@ image: img/og-image.png
                     <svg class="icon">
                         <use href="/svg/sprite.svg#external"></use>
                     </svg> 
-                    <a href="#" target="_blank" rel="noopener noreferrer">
+                    <a href="#" target="_blank" rel="noopener noreferrer" title="Opens in new tab">
                         Lorem Ipsum Link
                         <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
                     </a>
