--- a/project/twitter-python-bot.html
+++ b/project/twitter-python-bot.html
@@ -55,7 +55,7 @@ image: img/python-twitter-bot-webtermsbot.jpg
                     <svg class="icon">
                         <use href="/svg/sprite.svg#external"></use>
                     </svg> 
-                    <a href="https://github.com/idzan/twitter-retweet-like-bot" target="_blank" rel="noopener noreferrer">
+                    <a href="https://github.com/idzan/twitter-retweet-like-bot" target="_blank" rel="noopener noreferrer" title="Opens in new tab"
                         github.com/idzan/twitter-retweet-like-bot 
                         <span class="screen-reader" aria-hidden="true">(Opens in new tab)</span>
                     </a>
